--- a/dot_files/prometheus/polybar/config.ini
+++ b/dot_files/prometheus/polybar/config.ini
@@ -3,18 +3,20 @@
     background-alt  = #0a6cf5
     foreground      = #dfdfdf
     foreground-alt  = #639fff
-    primary         = #ffb52a
+    primary         = #7099bb
     secondary       = #e60053
-    alert           = #bd2c40
+    alert           = #ff4646
 
-[custom_scripts]
-    cpu_temp        = /home/xavier666/Documents/scripts_dir/polybar/cpu_temp
+[variables]
+    cpu_temp        = $HOME/Documents/scripts_dir/polybar/cpu_temp
+    DISPLAY_DEV_1   = "DP-1-1"
+    DISPLAY_DEV_2   = "DP-1-2"
 
 [size]
     bar_height      = 22
     bar_width       = 100%
     line_size       = 0
-    bar_radius      = 8
+    bar_radius      = 7
     bar_border_size = 4
     label_padding   = 1
 
@@ -23,7 +25,7 @@
     bar_icon_style  = "FontAwesome:style=Regular:size=10;2"
 
 [bar/bar1]
-    monitor         = ${env:MONITOR:DP-1-1}
+    monitor         = ${env:MONITOR:${variables.DISPLAY_DEV_1}}
     width           = ${size.bar_width}
     height          = ${size.bar_height}
     radius          = ${size.bar_radius}
@@ -59,7 +61,7 @@
     cursor-scroll   = ns-resize
 
 [bar/bar2]
-    monitor         = ${env:MONITOR:DP-1-2}
+    monitor         = ${env:MONITOR:${variables.DISPLAY_DEV_2}}
     width           = ${size.bar_width}
     height          = ${size.bar_height}
     radius          = ${size.bar_radius}
@@ -103,7 +105,7 @@
     ; Only show workspaces on the same output as the bar
     pin-workspaces = true
 
-    label-mode-foreground    = #000
+    label-mode-foreground    = #000000
     label-mode-background    = ${colors.primary}
     label-mode-padding       = ${size.label_padding}
 
@@ -127,6 +129,7 @@
     label-urgent             = %index%
     label-urgent-background  = ${colors.alert}
     label-urgent-padding     = ${size.label_padding}
+    strip-wsnumbers = true
 
 [module/cpu]
     type = internal/cpu
@@ -159,7 +162,7 @@
 
 [module/temperature]
     type = custom/script
-    exec = ${custom_scripts.cpu_temp}
+    exec = ${variables.cpu_temp}
     tail = true
     interval = 5
     format-prefix = " "
@@ -280,7 +283,7 @@
 
 [module/battery_charge]
     type = custom/script
-    exec = ${custom_scripts.get_battery}
+    exec = ${variables.get_battery}
     interval = 60
 
 [module/only_date]
